@@ -191,7 +191,30 @@ function ss_netapp_luns($hostname, $snmp_auth, $cmd, $arg1 = "", $arg2 = "") {
 # This function is a stub.
 # ============================================================================
 function ss_netapp_cifs($hostname, $snmp_auth) {
-	ss_netapp_split_snmp $snmp_auth;
+	$snmp						= explode(":", $snmp_auth);
+	$snmp_version				= $snmp[0];
+	$snmp_port					= $snmp[1];
+	$snmp_timeout				= $snmp[2];
+
+	$snmp_auth_username			= "";
+	$snmp_auth_password			= "";
+	$snmp_auth_protocol			= "";
+	$snmp_priv_passphrase		= "";
+	$snmp_priv_protocol			= "";
+	$snmp_context				= "";
+	$snmp_community				= "";
+
+	if ($snmp_version == 3) {
+		$snmp_auth_username		= $snmp[4];
+		$snmp_auth_password		= $snmp[5];
+		$snmp_auth_protocol		= $snmp[6];
+		$snmp_priv_passphrase	= $snmp[7];
+		$snmp_priv_protocol		= $snmp[8];
+		$snmp_context			= $snmp[9];
+	} else {
+		$snmp_community			= $snmp[3];
+	}
+//	ss_netapp_split_snmp $snmp_auth;
 	$baseOID = ".1.3.6.1.4.1.789";
 
 	$oids = array();
@@ -206,7 +229,30 @@ function ss_netapp_cifs($hostname, $snmp_auth) {
 # requires an FCP access license to get anything meaningful.
 # ============================================================================
 function ss_netapp_fcp($hostname, $snmp_auth) {
-	ss_netapp_split_snmp $snmp_auth;
+	$snmp						= explode(":", $snmp_auth);
+	$snmp_version				= $snmp[0];
+	$snmp_port					= $snmp[1];
+	$snmp_timeout				= $snmp[2];
+
+	$snmp_auth_username			= "";
+	$snmp_auth_password			= "";
+	$snmp_auth_protocol			= "";
+	$snmp_priv_passphrase		= "";
+	$snmp_priv_protocol			= "";
+	$snmp_context				= "";
+	$snmp_community				= "";
+
+	if ($snmp_version == 3) {
+		$snmp_auth_username		= $snmp[4];
+		$snmp_auth_password		= $snmp[5];
+		$snmp_auth_protocol		= $snmp[6];
+		$snmp_priv_passphrase	= $snmp[7];
+		$snmp_priv_protocol		= $snmp[8];
+		$snmp_context			= $snmp[9];
+	} else {
+		$snmp_community			= $snmp[3];
+	}
+//	ss_netapp_split_snmp $snmp_auth;
 	$baseOID = ".1.3.6.1.4.1.789";
 
 	$oids = array(
@@ -237,7 +283,30 @@ function ss_netapp_fcp($hostname, $snmp_auth) {
 # This function is a stub.
 # ============================================================================
 function ss_netapp_http($hostname, $snmp_auth) {
-	ss_netapp_split_snmp $snmp_auth;
+	$snmp						= explode(":", $snmp_auth);
+	$snmp_version				= $snmp[0];
+	$snmp_port					= $snmp[1];
+	$snmp_timeout				= $snmp[2];
+
+	$snmp_auth_username			= "";
+	$snmp_auth_password			= "";
+	$snmp_auth_protocol			= "";
+	$snmp_priv_passphrase		= "";
+	$snmp_priv_protocol			= "";
+	$snmp_context				= "";
+	$snmp_community				= "";
+
+	if ($snmp_version == 3) {
+		$snmp_auth_username		= $snmp[4];
+		$snmp_auth_password		= $snmp[5];
+		$snmp_auth_protocol		= $snmp[6];
+		$snmp_priv_passphrase	= $snmp[7];
+		$snmp_priv_protocol		= $snmp[8];
+		$snmp_context			= $snmp[9];
+	} else {
+		$snmp_community			= $snmp[3];
+	}
+//	ss_netapp_split_snmp $snmp_auth;
 	$baseOID = ".1.3.6.1.4.1.789";
 
 	$oids = array();
@@ -251,7 +320,30 @@ function ss_netapp_http($hostname, $snmp_auth) {
 # This function is a stub.
 # ============================================================================
 function ss_netapp_iscsi($hostname, $snmp_auth) {
-	ss_netapp_split_snmp $snmp_auth;
+	$snmp						= explode(":", $snmp_auth);
+	$snmp_version				= $snmp[0];
+	$snmp_port					= $snmp[1];
+	$snmp_timeout				= $snmp[2];
+
+	$snmp_auth_username			= "";
+	$snmp_auth_password			= "";
+	$snmp_auth_protocol			= "";
+	$snmp_priv_passphrase		= "";
+	$snmp_priv_protocol			= "";
+	$snmp_context				= "";
+	$snmp_community				= "";
+
+	if ($snmp_version == 3) {
+		$snmp_auth_username		= $snmp[4];
+		$snmp_auth_password		= $snmp[5];
+		$snmp_auth_protocol		= $snmp[6];
+		$snmp_priv_passphrase	= $snmp[7];
+		$snmp_priv_protocol		= $snmp[8];
+		$snmp_context			= $snmp[9];
+	} else {
+		$snmp_community			= $snmp[3];
+	}
+//	ss_netapp_split_snmp $snmp_auth;
 	$baseOID = ".1.3.6.1.4.1.789";
 
 	$oids = array();
@@ -265,7 +357,30 @@ function ss_netapp_iscsi($hostname, $snmp_auth) {
 # This function is a stub.
 # ============================================================================
 function ss_netapp_nfs($hostname, $snmp_auth) {
-	ss_netapp_split_snmp $snmp_auth;
+	$snmp						= explode(":", $snmp_auth);
+	$snmp_version				= $snmp[0];
+	$snmp_port					= $snmp[1];
+	$snmp_timeout				= $snmp[2];
+
+	$snmp_auth_username			= "";
+	$snmp_auth_password			= "";
+	$snmp_auth_protocol			= "";
+	$snmp_priv_passphrase		= "";
+	$snmp_priv_protocol			= "";
+	$snmp_context				= "";
+	$snmp_community				= "";
+
+	if ($snmp_version == 3) {
+		$snmp_auth_username		= $snmp[4];
+		$snmp_auth_password		= $snmp[5];
+		$snmp_auth_protocol		= $snmp[6];
+		$snmp_priv_passphrase	= $snmp[7];
+		$snmp_priv_protocol		= $snmp[8];
+		$snmp_context			= $snmp[9];
+	} else {
+		$snmp_community			= $snmp[3];
+	}
+//	ss_netapp_split_snmp $snmp_auth;
 	$baseOID = ".1.3.6.1.4.1.789";
 
 	$oids = array();
@@ -281,7 +396,30 @@ function ss_netapp_nfs($hostname, $snmp_auth) {
 # we support, which is currently CIFS, FCP, iSCSI, and NFS.
 # ============================================================================
 function ss_netapp_license($hostname, $snmp_auth, $arg1="") {
-	ss_netapp_split_snmp $snmp_auth;
+	$snmp						= explode(":", $snmp_auth);
+	$snmp_version				= $snmp[0];
+	$snmp_port					= $snmp[1];
+	$snmp_timeout				= $snmp[2];
+
+	$snmp_auth_username			= "";
+	$snmp_auth_password			= "";
+	$snmp_auth_protocol			= "";
+	$snmp_priv_passphrase		= "";
+	$snmp_priv_protocol			= "";
+	$snmp_context				= "";
+	$snmp_community				= "";
+
+	if ($snmp_version == 3) {
+		$snmp_auth_username		= $snmp[4];
+		$snmp_auth_password		= $snmp[5];
+		$snmp_auth_protocol		= $snmp[6];
+		$snmp_priv_passphrase	= $snmp[7];
+		$snmp_priv_protocol		= $snmp[8];
+		$snmp_context			= $snmp[9];
+	} else {
+		$snmp_community			= $snmp[3];
+	}
+//	ss_netapp_split_snmp $snmp_auth;
 	$baseOID = ".1.3.6.1.4.1.789";
 
 	$oids = array(
